safe exceptions are flaky